fix alignments in thread preview bottom menu

--- a/packages/commonwealth/client/styles/pages/discussions/thread_preview.scss
+++ b/packages/commonwealth/client/styles/pages/discussions/thread_preview.scss
@@ -66,6 +66,10 @@
           }
         }
 
+        .dot-separator {
+          height: 20px; 
+        }
+
         .last-updated-text.Text {
           color: $neutral-500;
         }
@@ -127,6 +131,10 @@
         display: flex;
         align-items: center;
         gap: 4px;
+
+        div:first-child {
+          height: 19px;
+        }
 
         .Text {
           line-height: 24px;
